Added module permissions for JDK 17+